--- a/local.yml
+++ b/local.yml
@@ -1,5 +1,16 @@
 - hosts: localhost
   become: true
   tasks:
-  - name: Install htop
-    apt: name=htop
+  - name: Install packages
+    apt: name={{ item }}
+    with_times:
+      - vim
+      - sshpass
+      - python3
+      - python2
+      - python-pip
+      - mysql-client-5.7
+      - tmux
+      - docker
+      - docker-compose
+      - golang-stable
