--- a/local.yml
+++ b/local.yml
@@ -2,8 +2,8 @@
   become: true
   tasks:
   - name: Install packages
-    apt: name={{ item }}
-    with_times:
+    apt: name={{item}}
+    with_items:
       - vim
       - sshpass
       - python3
